换城市和手动更新天气的功能。 ”

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,8 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.myweather.app.activity.WeatherActivity">
-            
+            android:name="com.myweather.app.activity.WeatherActivity"> 
+        </activity>
+        <activity
+            android:name="com.myweather.app.service.AutoUpdateService"> 
+        </activity>
+        <activity
+            android:name="com.myweather.app.receiver.AutoUpdateService"> 
         </activity>
     </application>
 
